# b2bit-coding-challenge-back

./: .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
CineReserve/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/dev/: entrypoint.sh
docs/postman/: CineReserve.postman_collection.json
movies/: models.py  serializers.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py
showings/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
showings/migrations/: 0001_initial.py  0002_initial.py
tickets/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: my_portal.html
